Ryddar i kode
- Fjernar ubrukte ting
- Bruker getFirst i staden for get(0)